--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<body>
 		<Header />
 		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
+			<h1>Site Under Construction</h1>
 			<p>
 				Blue Peak Horizons LLC specializes in providing high-quality cybersecurity consulting services,
 				including FedRAMP assessments, RMF compliance, and secure software development guidance. Our 
